Adding updated project files like code of conduct and contributing

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,25 @@
 Package: textfeatureinfor
-Title: What the Package Does (One Line, Title Case)
+Title: Text Features
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    c(person(given = "Lynn",
+           family = "Wu",
+           role = c("aut", "cre"),
+           email = "ynnwbl@gmail.com"),
+    person(given = "Kiran",
+           family = "Phaterpekar",
+           role = "aut",
+           email = "kphaterp@student.ubc.ca"),
+    person(given = "Jacqueline",
+           family = "Chong",
+           role = "aut",
+           email = "jacqann@student.ubc.ca"),
+    person(given = "Paniz",
+           family = "Fazlali",
+           role = "aut",
+           email = "paniz.fazlali@gmail.com"))
+Description: Package to extract interesting details about text.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
