--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,3 +23,5 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Imports: 
+    katherinemansfieldr
