--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,9 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
-    katherinemansfieldr,
+    rapportools,
     stopwords,
     stringr
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
