Added vignette for remove_stop_words

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,5 +29,8 @@ Imports:
     stringr,
     stringi
 Suggests: 
+    rmarkdown,
+    knitr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
