Added dependencies for running vignette remove_stop_words

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,9 @@ Imports:
     rapportools,
     stopwords,
     stringr,
-    stringi
+    stringi,
+    dplyr,
+    tidyr
 Suggests: 
     rmarkdown,
     knitr,
